--- a/app/Resources/views/course_info/prerequisite/form/edit_prerequisite.html.twig
+++ b/app/Resources/views/course_info/prerequisite/form/edit_prerequisite.html.twig
@@ -1,4 +1,5 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.prerequisite.edit', {'id': form.vars.data.id }), 'data-card': 'card-prerequisite'}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.prerequisite.edit',
+    {'id': form.vars.data.id }), 'data-card': 'card-prerequisite'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
     <div class="col">
