--- a/app/Resources/views/course_info/prerequisite/form/prerequisite.html.twig
+++ b/app/Resources/views/course_info/prerequisite/form/prerequisite.html.twig
@@ -1,10 +1,11 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.objectives.tutoring_resource.add', {'id': courseInfo.id }), 'data-card': 'card-tutoring-resources'}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.prerequisite.prerequisite.add',
+    {'id': courseInfo.id }), 'data-card': 'card-prerequisite'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
     <div class="col">
         <div>
             <div>
-                <label>Si l'étudiant rencontre des difficultés, il peut…</label>
+                <label>Avant le début du cours, l'étudiant doit…</label>
                 {% if form.description is defined %}
                     {{ form_widget(form.description) }}
                 {% endif %}
