--- a/app/Resources/views/course_info/prerequisite/form/tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/prerequisite/form/tutoring_resources.html.twig
@@ -1,4 +1,5 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.tutoring_resource.edit', {'id': form.vars.data.id }), 'data-card': 'card-tutoring-resources'}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url':
+    path('app.course_info.prerequisite.tutoring_resource.add', {'id': courseInfo.id }), 'data-card': 'card-tutoring-resources'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
     <div class="col">
