--- a/app/Resources/views/course/show.html.twig
+++ b/app/Resources/views/course/show.html.twig
@@ -34,7 +34,7 @@
             <a href="{{ path('app_admin.course_new_course_info', {'id': course.id}) }}" class="btn btn-primary float-right">Ajouter un syllabus</a>
         </div>
         <div class="card-body p-0">
-            <table class="table table-striped projects">
+            <table class="table table-hover projects">
                 <thead>
                 <tr>
                     <th>
@@ -58,12 +58,17 @@
                             {{ courseInfo.year }}
                         </td>
                         <td>
-                            {{ courseInfo.title }}
+                            <a href="{{ path('app.course_info.dashboard.index', {'id': courseInfo.id}) }}">
+                                {{ courseInfo.title }}
+                            </a>
                         </td>
                         <td>
                             {{ courseInfo.structure }}
                         </td>
                         <td>
+                            <a href="{{ path('app.course_info.dashboard.index', {'id': courseInfo.id }) }}" class="btn btn-primary">
+                                <i class="fas fa-eye"></i>
+                            </a>
                             <a href="{{ path('app_admin_course_info_edit', {'id': courseInfo.id }) }}" class="btn btn-primary">
                                 <i class="fas fa-edit"></i>
                             </a>
