--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -25,8 +25,8 @@
             </li>
         <li class="nav-item">
             <a
-                    href="{{ path('app_admin.course_index') }}"
-                    class="nav-link {{ printActiveAdminSidebarLink(['app_admin.course_']) }}">
+                    href="{{ path('app.admin.course.index') }}"
+                    class="nav-link {{ printActiveAdminSidebarLink(['app.admin.course.']) }}">
                 <i class="nav-icon fas fa-graduation-cap"></i>
                 <p>
                     Cours
