--- a/app/Resources/views/course_info/view/dark_student_objectives.html.twig
+++ b/app/Resources/views/course_info/view/dark_student_objectives.html.twig
@@ -1,4 +1,4 @@
-<h3 class="text-shadow mt-5">{{ 'app.view.student.objectives.label' | trans   }}</h3>
+<h3 id="objectives-section" class="text-shadow mt-5">{{ 'app.view.student.tabs.objectives' | trans   }}</h3>
 <hr class="bg-dark horizontal-separator">
 
 {% if courseInfo.coursePrerequisites is not empty %}
