--- a/app/Resources/views/course_info/view/dark_student_presentation.html.twig
+++ b/app/Resources/views/course_info/view/dark_student_presentation.html.twig
@@ -1,4 +1,4 @@
-<h3 class="text-shadow">{{ 'app.view.student.presentation.label' | trans   }}</h3>
+<h3 id="presentation-section" class="text-shadow">{{ 'app.view.student.tabs.presentation' | trans   }}</h3>
 <hr class="bg-dark horizontal-separator">
 <div class="row">
     <div class="col-md">
