--- a/app/Resources/views/course_info/view/dark_student_activities.html.twig
+++ b/app/Resources/views/course_info/view/dark_student_activities.html.twig
@@ -1,4 +1,4 @@
-<h3 class="text-shadow mt-5">{{ 'app.view.student.activities.label' | trans   }}</h3>
+<h3 id="activities-section" class="text-shadow mt-5">{{ 'app.view.student.tabs.activities' | trans   }}</h3>
 <hr class="bg-dark horizontal-separator">
 {% for section in courseInfo.courseSections %}
     {% if section.courseSectionActivities is not empty %}
