--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -240,7 +240,7 @@
             </ul>
         </li>
 
-        {% set administrationLink = ['app.admin.user.', 'app_admin_groups', 'app.admin.job.', 'app.admin.notification.'] %}
+        {% set administrationLink = ['app.admin.user.', 'app_admin_groups', 'app.admin.job.', 'app.admin.notification.', 'dmishh_settings_manage_global'] %}
         <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(administrationLink) ? 'menu-open' }}">
             <a href="#" class="nav-link {{ printActiveAdminSidebarLink(administrationLink) }}">
                 <i class="nav-icon fas fa-cogs"></i>
@@ -251,6 +251,16 @@
             </a>
             <ul class="nav nav-treeview"
                 style="display: {{ printActiveAdminSidebarLink(administrationLink) ? 'block' : 'none' }};">
+                <li class="nav-item pl-2">
+                    <a href="{{ path('dmishh_settings_manage_global') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['dmishh_settings_manage_global']) }}">
+                        <i class="nav-icon fas fa-calculator"></i>
+                        <p>
+                            Paramètres
+                        </p>
+                    </a>
+                </li>
+
                 <li class="nav-item pl-2">
                     <a href="{{ path('app_admin_groups_index') }}"
                        class="nav-link {{ printActiveAdminSidebarLink(['app_admin_groups']) }}">
