--- a/app/Resources/views/course/index.html.twig
+++ b/app/Resources/views/course/index.html.twig
@@ -31,7 +31,7 @@
             </div>
 
             {% if pagination.totalItemCount > 0 %}
-                <table class="table table-bordered table-responsive-sm">
+                <table class="table table-hover table-responsive-sm">
                     <thead>
                     <tr>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.course.label.code'|trans, 'c.code') }}</th>
