--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -67,7 +67,7 @@
                 <li class="nav-item">
                     <a class="nav-link menu-tab"
                        id="menu-prerequisites-course"
-                       href="{{ path('app.course_info.prerequisites.index', { 'id': courseInfo.id }) }}">
+                       href="{{ path('app.course_info.prerequisite.index', { 'id': courseInfo.id }) }}">
                         <i class="fas fa-key"></i>
                         <p>{{ 'app.sidebar.prerequisites' | trans }}</p>
                     </a>
