--- a/app/Resources/views/course_info/prerequisite/form/edit_prerequisite.html.twig
+++ b/app/Resources/views/course_info/prerequisite/form/edit_prerequisite.html.twig
@@ -5,10 +5,16 @@
     <div class="col">
         <div>
             <div>
-                <label>Avant le début du cours, l'étudiant doit…</label>
-                {% if form.description is defined %}
-                    {{ form_widget(form.description) }}
-                {% endif %}
+                <p>
+                    <label>Avant le début du cours, l'étudiant doit…</label>
+                    {% if form.description is defined %}
+                        {{ form_widget(form.description) }}
+                    {% endif %}
+                </p>
+                <p>
+                    <label>Choisir le(s) cours associé(s)</label>
+                    {{ form_widget(form.courses) }}
+                </p>
             </div>
         </div>
     </div>
@@ -20,3 +26,8 @@
 </div>
 {{ form_widget(form._token) }}
 {{ form_end(form, {'render_rest': false }) }}
+<script>
+    $(document).ready(function () {
+        $('form[name="course_prerequisite"]').find('.select2entity').select2entity();
+    });
+</script>
