--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -622,3 +622,10 @@ $break: 400px;
     position: absolute;
     left: 0;*/
 }
+
+/*
+    Effect
+ */
+.collapsed i.rotate-l90 {
+    transform: rotate(90deg);
+}
