--- a/app/Resources/views/course/show.html.twig
+++ b/app/Resources/views/course/show.html.twig
@@ -1,5 +1,6 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = course.title %}
+{% set href = path('app.admin.course.index') %}
 
 {% block modals %}
     {{ parent() }}
