--- a/app/Resources/views/critical_achievement/new.html.twig
+++ b/app/Resources/views/critical_achievement/new.html.twig
@@ -1,5 +1,7 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'Ajouter un acquis critique' %}
+{% set href = path('app.admin.critical_achievement.index') %}
+
 {% block subContent %}
 
     <div class="card card-primary">
