--- a/app/Resources/views/groups/edit.html.twig
+++ b/app/Resources/views/groups/edit.html.twig
@@ -1,5 +1,6 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'Editer un groupe' %}
+{% set href = path('app_admin_groups_index') %}
 
 {% block subContent %}
     <div class="card">
