--- a/app/Resources/views/language/new.html.twig
+++ b/app/Resources/views/language/new.html.twig
@@ -1,5 +1,7 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = "Ajouter une langue"%}
+{% set href = path('app.admin.language.index') %}
+
 {% block subContent %}
 
     <div class="card card-primary">
