--- a/app/Resources/views/year/edit.html.twig
+++ b/app/Resources/views/year/edit.html.twig
@@ -1,5 +1,6 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'Modifier une année' %}
+{% set href = path('app.admin.year.index') %}
 
 {% block subContent %}
     <div class="card card-primary">
