--- a/app/Resources/views/activity_type/new.html.twig
+++ b/app/Resources/views/activity_type/new.html.twig
@@ -1,5 +1,7 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = "Ajouter un type d\'activité"%}
+{% set href = path('app.admin.activity_type.index') %}
+
 {% block subContent %}
 
     <div class="card card-primary">
