--- a/app/Resources/views/course/new.html.twig
+++ b/app/Resources/views/course/new.html.twig
@@ -1,5 +1,6 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'Ajouter un cours' %}
+{% set href = path('app.admin.course.index') %}
 
 {% block subContent %}
     <div class="card">
