--- a/app/Resources/views/domain/edit.html.twig
+++ b/app/Resources/views/domain/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'Modifier un domaine' %}
+{% set href = path('app.admin.domain.index') %}
+
 {% block subContent %}
 
     <div class="card card-primary">
