--- a/app/Resources/views/equipment/edit.html.twig
+++ b/app/Resources/views/equipment/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'Modifier un équipement' %}
+{% set href = path('app.admin.equipment.index') %}
+
 {% block subContent %}
 
     {{ include('equipment/_form.html.twig') }}
