--- a/app/Resources/views/level/new.html.twig
+++ b/app/Resources/views/level/new.html.twig
@@ -1,5 +1,7 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = "Ajouter un niveau"%}
+{% set href = path('app.admin.level.index') %}
+
 {% block subContent %}
 
     <div class="card card-primary">
