--- a/app/Resources/views/period/edit.html.twig
+++ b/app/Resources/views/period/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'Modifier une période' %}
+{% set href = path('app.admin.period.index') %}
+
 {% block subContent %}
 
     <div class="card card-primary">
