--- a/app/Resources/views/user/edit.html.twig
+++ b/app/Resources/views/user/edit.html.twig
@@ -1,5 +1,6 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'Modifier un utilisateur' %}
+{% set href = path('app.admin.user.index') %}
 
 {% block subContent %}
     <div class="card card-primary">
