--- a/app/Resources/views/year/new.html.twig
+++ b/app/Resources/views/year/new.html.twig
@@ -1,5 +1,7 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'Ajouter une année' %}
+{% set href = path('app.admin.year.index') %}
+
 {% block subContent %}
 
     <div class="card card-primary">
